--- a/style.css
+++ b/style.css
@@ -1,3 +1,81 @@
-body{
-    background-image: url(./download\ \(1\).webp);
+
+* {
+    margin: 0;
+    padding: 0;
+    font-family: 'Poppins',sans-serif;
+    box-sizing: border-box;
+  }
+  body{
+    height: 100%;
+    width: 100%;
+    background: linear-gradient(135deg, #4203a9, #90bafc);
+  }
+  .container {
+    height: 100vh;
+    width: 100vh;
+    /* background: linear-gradient(135deg, #4203a9, #90bafc); */
+    color:#fff;
+    padding: 10px;
+  }
+.calculate{
+ width: 100%;
+ max-width: 600px;
+ margin-left: 10%;
+ margin-top: 10%;
+}
+.calculate h1{
+    font-size: 8vh;
+}
+.input-box{
+    margin-top: 10%;
+    margin-bottom: 5%;
+    background-color: rgba(255, 255, 255, 0.3);
+    padding: 3.5vh;
+    display: flex;
+    align-items: center;
+
+}
+.input-box input{
+    flex: 1;
+    margin-right: 20px;
+    padding: 20px 15px;
+    font-size: 3vw;
+    border: 0;
+    outline: 0;
+    border-radius: 5px;
+    position: relative;
+}
+.input-box button{
+    padding: 20px 15px;
+    font-size: 3vw;
+    border: 0;
+    outline: 0;
+    border-radius: 5px;
+    background-color: #ffff78;
+    font-weight: 700;
+    cursor: pointer;
+}
+.input-box button:hover{
+    background-color: #ffff60;
+}
+.input-box button:active{
+    background-color: #ffff45;
+}
+.input-box input::-webkit-calendar-picker-indicator{
+    top:0;
+    left:0;
+    right:0;
+    bottom:0;
+    width:auto;
+    height: auto;
+    position: absolute;
+    background-position: calc(100% - 10px);
+    background-size: 30px;
+    cursor: pointer;
+}
+#result{
+  font-size: 2.3vw;
+  font-family: 'Times New Roman', Times, serif;
+  text-decoration: solid;
+  color: #fdfd82;
 }
