--- a/style.css
+++ b/style.css
@@ -1,81 +1,49 @@
 
-* {
+*{
     margin: 0;
     padding: 0;
-    font-family: 'Poppins',sans-serif;
     box-sizing: border-box;
-  }
-  body{
-    height: 100%;
-    width: 100%;
-    background: linear-gradient(135deg, #4203a9, #90bafc);
-  }
-  .container {
+    font-family: sans-serif;
+}
+body{
+    transition: 1s;
+}
+.main{
     height: 100vh;
-    width: 100vh;
-    /* background: linear-gradient(135deg, #4203a9, #90bafc); */
-    color:#fff;
-    padding: 10px;
-  }
-.calculate{
- width: 100%;
- max-width: 600px;
- margin-left: 10%;
- margin-top: 10%;
-}
-.calculate h1{
-    font-size: 8vh;
-}
-.input-box{
-    margin-top: 10%;
-    margin-bottom: 5%;
-    background-color: rgba(255, 255, 255, 0.3);
-    padding: 3.5vh;
+    width:100%;
     display: flex;
+    justify-content: center;
     align-items: center;
+}
+.container{
+    height: 10rem;
+    width: 30rem;
+    background-color:#fff;
+    border-radius: 5px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1),
+            0 8px 16px rgba(0, 0, 0, 0.1);
+
 
 }
-.input-box input{
-    flex: 1;
-    margin-right: 20px;
-    padding: 20px 15px;
-    font-size: 3vw;
-    border: 0;
+#color-code{
+    margin-top: 10px;
+ font-size: 3vw;
+ text-align: center;
+}
+button{
+    font-size: 2.5vw;
     outline: 0;
-    border-radius: 5px;
-    position: relative;
-}
-.input-box button{
-    padding: 20px 15px;
-    font-size: 3vw;
     border: 0;
-    outline: 0;
+    background-color: cadetblue;
+    color: #fff;
+    width: 25vw;
+    height: 7vh;
     border-radius: 5px;
-    background-color: #ffff78;
-    font-weight: 700;
-    cursor: pointer;
+    text-align: center;
 }
-.input-box button:hover{
-    background-color: #ffff60;
+button:hover{
+    background-color: rgba(106, 166, 168, 0.966);
 }
-.input-box button:active{
-    background-color: #ffff45;
-}
-.input-box input::-webkit-calendar-picker-indicator{
-    top:0;
-    left:0;
-    right:0;
-    bottom:0;
-    width:auto;
-    height: auto;
-    position: absolute;
-    background-position: calc(100% - 10px);
-    background-size: 30px;
-    cursor: pointer;
-}
-#result{
-  font-size: 2.3vw;
-  font-family: 'Times New Roman', Times, serif;
-  text-decoration: solid;
-  color: #fdfd82;
+button:active{
+    background-color: rgb(100, 165, 167);
 }
